--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Tip Time</string>
+    <string name="cost_of_service_hint">Cost of Service</string>
+    <string name="service_question">How was the service?</string>
+    <string name="option_amazing">Amazing (20%)</string>
+    <string name="option_good">Good (18%)</string>
+    <string name="option_okay">Okay (15%)</string>
+    <string name="tip_amount">Tip Amount</string>
+    <string name="calculate">Calculate</string>
 </resources>
