--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,6 @@
     <string name="option_amazing">Amazing (20%)</string>
     <string name="option_good">Good (18%)</string>
     <string name="option_okay">Okay (15%)</string>
-    <string name="tip_amount">Tip Amount</string>
+    <string name="tip_amount">Tip Amount: %s</string>
     <string name="calculate">Calculate</string>
 </resources>
